--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 3.5.1)
 project(miniaudioex)
 
 set(BUILD_PLATFORM "unknown" CACHE STRING "Target platform for the build")
-set(CMAKE_BUILD_TYPE Release)
-set(CMAKE_C_FLAGS_RELEASE "-O3")
+#set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_C_FLAGS_RELEASE "-O3")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic")
 
 if(BUILD_PLATFORM STREQUAL "windows")
@@ -25,8 +25,8 @@ include_directories(
     "${PROJECT_SOURCE_DIR}/include"
 )
 
-add_library(${PROJECT_NAME} SHARED ${SOURCES})
-#add_executable(${PROJECT_NAME} ${SOURCES})
+#add_library(${PROJECT_NAME} SHARED ${SOURCES})
+add_executable(${PROJECT_NAME} ${SOURCES})
 
 if(BUILD_PLATFORM STREQUAL "linux")
     target_link_libraries(${PROJECT_NAME} -lpthread -lm -ldl)
