--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,7 @@ jobs:
         mkdir build
         cd build
         cmake -DBUILD_PLATFORM=windows -DCMAKE_BUILD_TYPE=Release ..
-        cmake --build .
+        cmake --build . --config Release
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
