--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        arch: [x86_64, arm64]  # Linux architectures: x64 and ARM64
+        arch: [x86, x86_64]  # Linux architectures: x86 (32-bit) and x64 (64-bit)
 
     steps:
     - name: Checkout code
@@ -45,15 +45,20 @@ jobs:
     - name: Set up dependencies on Linux
       run: |
         echo "Setting up dependencies on Linux ${{ matrix.arch }}"
+        sudo dpkg --add-architecture i386
         sudo apt-get update
-        sudo apt-get install -y cmake
+        sudo apt-get install -y cmake gcc-multilib g++-multilib
 
     - name: Build the project on Linux
       run: |
         echo "Building project on Linux ${{ matrix.arch }}"
         mkdir build
         cd build
-        cmake -DBUILD_PLATFORM=linux -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }} ..
+        if [ "${{ matrix.arch }}" == "x86" ]; then
+          cmake -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++ -DCMAKE_C_FLAGS="-m32" -DCMAKE_CXX_FLAGS="-m32" -DBUILD_PLATFORM=linux -DCMAKE_BUILD_TYPE=Release ..
+        else
+          cmake -DBUILD_PLATFORM=linux -DCMAKE_BUILD_TYPE=Release ..
+        fi
         cmake --build .
 
     - name: Upload build artifacts
@@ -66,7 +71,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        arch: [x86_64]  # Windows architecture: x64 only
+        arch: [x86, x86_64]  # Windows architectures: x86 (32-bit) and x64 (64-bit)
 
     steps:
     - name: Checkout code
@@ -82,7 +87,11 @@ jobs:
         echo "Building project on Windows ${{ matrix.arch }}"
         mkdir build
         cd build
-        cmake -DBUILD_PLATFORM=windows -DCMAKE_BUILD_TYPE=Release ..
+        if [ "${{ matrix.arch }}" == "x86" ]; then
+          cmake -A Win32 -DBUILD_PLATFORM=windows -DCMAKE_BUILD_TYPE=Release ..
+        else
+          cmake -DBUILD_PLATFORM=windows -DCMAKE_BUILD_TYPE=Release ..
+        fi
         cmake --build . --config Release
 
     - name: Upload build artifacts
