Test building for 32 bit windows and linux

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,7 @@ jobs:
         echo "Building project on Windows ${{ matrix.arch }}"
         mkdir build
         cd build
-        if (${{ matrix.arch }} -eq 'x86') {
+        if ($env:matrix_arch -eq 'x86') {
           cmake -A Win32 -DBUILD_PLATFORM=windows -DCMAKE_BUILD_TYPE=Release ..
         } else {
           cmake -DBUILD_PLATFORM=windows -DCMAKE_BUILD_TYPE=Release ..
