--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,11 +87,11 @@ jobs:
         echo "Building project on Windows ${{ matrix.arch }}"
         mkdir build
         cd build
-        if ($env:matrix_arch -eq 'x86') {
+        if "%matrix_arch%"=="x86" (
           cmake -A Win32 -DBUILD_PLATFORM=windows -DCMAKE_BUILD_TYPE=Release ..
-        } else {
+        ) else (
           cmake -DBUILD_PLATFORM=windows -DCMAKE_BUILD_TYPE=Release ..
-        }
+        )
         cmake --build . --config Release
 
     - name: Upload build artifacts
