--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,7 +107,7 @@ jobs:
       run: |
         echo "Setting up dependencies on Linux ARM32 ${{ matrix.arch }}"
         sudo apt-get update
-        sudo apt-get install -y cmake gcc-arm-linux-gnueabihf
+        sudo apt-get install -y cmake gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
 
     - name: Build the project on Linux ARM32
       run: |
