--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,7 +90,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-linux-${{ matrix.arch }}
+        name: build-linux-arm64
         path: build/
 
   build-linux-arm32:
@@ -120,7 +120,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-linux-${{ matrix.arch }}
+        name: build-linux-arm
         path: build/
 
   build-windows:
