--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-macos-arm64
+        name: miniaudioex-build-macos-arm64
         path: build/
 
   build-macos-x86_64:
@@ -58,7 +58,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-macos-x86_64
+        name: miniaudioex-build-macos-x86_64
         path: build/
 
   build-linux:
@@ -88,7 +88,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-linux-${{ matrix.arch }}
+        name: miniaudioex-build-linux-x86_64
         path: build/
 
 
@@ -119,7 +119,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-linux-arm64
+        name: miniaudioex-build-linux-arm64
         path: build/
 
   build-linux-arm32:
@@ -149,7 +149,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-linux-arm
+        name: miniaudioex-build-linux-arm
         path: build/
 
   build-windows:
@@ -177,5 +177,5 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-windows-${{ matrix.name }}
+        name: miniaudioex-build-windows-${{ matrix.name }}
         path: build/
